--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ main {
     border-radius: 5px;
 }
 
+.title {
+  font-weight: 800;
+  font-size: 40px;
+}
+
 .tops {
   background: #fff;
   margin-bottom: 40px;
